--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -26,6 +26,7 @@
                 <label class="block text-gray-700">Password</label>
                 <input type="password" name="password" class="w-full px-3 py-2 border rounded-lg">
             </div>
+            <input type="hidden" name="next" value="{{ next }}">
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-full">
                 Login
             </button>
