added new model record for teachers

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,12 +26,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="{% url 'cat_list' %}">CATs</a></li>
-                <li><a href="{% url 'class_list' %}">Classes</a></li>
-                <li><a href="{% url 'student_list' %}">Students</a></li>
-                <li><a href="{% url 'subject_list' %}">Subjects</a></li>
-                <li><a href="{% url 'term_list' %}">Terms</a></li>
-            </ul>
+                <li><a href="#">CATs</a></li>
+                <li><a href="#">Classes</a></li>
+                
         </nav>
     </header>
 
