--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -268,7 +268,7 @@
       </li><!-- End Register Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'subject performance'%}">
+        <a class="nav-link collapsed" href="{% url 'subject_performance'%}">
           <i class="bi bi-card-list"></i>
           <span>subject performance</span>
         </a>
