--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -1,5 +1,5 @@
 <!-- templates/dashboard/admin_dashboard.html -->
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% load static %}
 
 {% block extra_head %}
