--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -4,7 +4,7 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="{% url 'dashboard'%}" class="logo d-flex align-items-center">
+      <a href="{% url 'admin_dashboard'%}" class="logo d-flex align-items-center">
         <img src="{% static 'assets/img/logo.png'%}" alt="">
         <span class="d-none d-lg-block">ELIMU</span>
       </a>
