--- a/templates/auth/forgot_password.html
+++ b/templates/auth/forgot_password.html
@@ -6,12 +6,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-  <title>KEMRI | Forget Password</title>
+  <title>Elimu | Forget Password</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   
   <!-- Favicons -->
-  <link href="{% static 'assets/img/kemrilogo.png' %}" rel="icon">
+  <link href="{% static 'assets/img/logo.png' %}" rel="icon">
   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
   
   <!-- Google Fonts -->
@@ -101,7 +101,7 @@
               <div class="d-flex justify-content-center py-4">
                 <a href="#" class="logo d-flex align-items-center w-auto">
                   <img src="{% static 'assets/img/kemrilogo.png' %}" alt="" style="max-width: 80px; max-height: 80px;">
-                  <h2><b><span class="d-none d-lg-block">KEMRI</span></b></h2>
+                  <h2><b><span class="d-none d-lg-block">ELIMU</span></b></h2>
                 </a>
               </div>
 
