--- a/templates/news/news_edit.html
+++ b/templates/news/news_edit.html
@@ -5,7 +5,7 @@
     <h1>Edit News</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
             <li class="breadcrumb-item"><a href="#">News</a></li>
             <li class="breadcrumb-item active">Edit News</li>
         </ol>
@@ -28,7 +28,7 @@
                     </form>
 
                     <div class="d-flex justify-content-end mt-3">
-                        <a href="{% url 'news_list' %}" class="btn btn-secondary">Back to List</a>
+                        <a href="#" class="btn btn-secondary">Back to List</a>
                     </div>
                 </div>
             </div>
