--- a/templates/students/student_detail.html
+++ b/templates/students/student_detail.html
@@ -23,5 +23,5 @@
 
 <a href="{% url 'student_update' student.pk %}">Edit</a> |
 <a href="{% url 'student_delete' student.pk %}">Delete</a> |
-<a href="{% url 'student_list' %}">Back to List</a>
+<a href="{% url 'students_list' %}">Back to List</a>
 {% endblock %}
