made new modifications

--- a/templates/auth/reset_password.html
+++ b/templates/auth/reset_password.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password - Majimaji</title>
+    <title>Reset Password - Elimu </title>
     <!-- Favicons -->
     <link href="{%  static 'assets/img/logo.png'%}" rel="icon">
-    <link href="{%  static 'assets/img/apple-touch-icon.png'%}" rel="apple-touch-icon">
+    <link href="{%  static 'assets/img/logo.png'%}" rel="apple-touch-icon">
   
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
