--- a/templates/message/message_list.html
+++ b/templates/message/message_list.html
@@ -144,7 +144,7 @@
                 <div class="dropdown">
                     <i class="bi bi-three-dots-vertical" onclick="toggleDropdown()"></i>
                     <div id="myDropdown" class="dropdown-content">
-                        <a href="{% url 'dashboard'%}">Home</a>
+                        <a href="{% url 'admin_dashboard'%}">Home</a>
                         <a href="{% url 'profile_detail'%}">Profile</a>
                         <a href="{% url 'logout' %}">Logout</a>
                     </div>
