--- a/templates/message/message_thread.html
+++ b/templates/message/message_thread.html
@@ -318,7 +318,7 @@
                     <div id="dropdown-menu" class="dropdown-menu">
                         <a href="#">View Profile</a>
                         <a href="{% url 'message_list'%}">Chats</a>
-                        <a href="{% url 'dashboard'%}">Home</a>
+                        <a href="{% url 'admin_dashboard'%}">Home</a>
                         <a href="#">Block</a>
                     </div>
                 </div>
