--- a/templates/auth/forgot_password.html
+++ b/templates/auth/forgot_password.html
@@ -12,7 +12,7 @@
   
   <!-- Favicons -->
   <link href="{% static 'assets/img/logo.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="{% static 'assets/img/logo.png' %}" rel="apple-touch-icon">
   
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -100,7 +100,7 @@
 
               <div class="d-flex justify-content-center py-4">
                 <a href="#" class="logo d-flex align-items-center w-auto">
-                  <img src="{% static 'assets/img/kemrilogo.png' %}" alt="" style="max-width: 80px; max-height: 80px;">
+                  <img src="{% static 'assets/img/logo.png' %}" alt="" style="max-width: 80px; max-height: 80px;">
                   <h2><b><span class="d-none d-lg-block">ELIMU</span></b></h2>
                 </a>
               </div>
