--- a/templates/auth/password_reset.html
+++ b/templates/auth/password_reset.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Reset</title>
+    <title>Elimu | Password Reset</title>
 </head>
 <body>
     <h2>Password Reset</h2>
