--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -14,7 +14,7 @@
 
   <!-- Favicons -->
   <link href="{% static 'assets/img/logo.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="{% static 'assets/img/logo.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
