--- a/templates/auth/reset_password_email.html
+++ b/templates/auth/reset_password_email.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Your Password</title>
+    <title>Elimu | Reset Your Password</title>
     <style>
         body {
             font-family: Arial, sans-serif;
