--- a/templates/students/database_student_list.html
+++ b/templates/students/database_student_list.html
@@ -1,15 +1,64 @@
-{% extends 'base.html' %}
+{% extends "base/base.html" %}
 
 {% block content %}
-<h2>Students</h2>
-<a href="{% url 'student_create' %}">Add New Student</a>
-<ul>
-    {% for student in students %}
-        <li>
-            <a href="{% url 'student_detail' student.pk %}">{{ student.name }} ({{ student.admission_number }})</a>
-            (<a href="{% url 'student_update' student.pk %}">Edit</a> |
-             <a href="{% url 'student_delete' student.pk %}">Delete</a>)
-        </li>
-    {% endfor %}
-</ul>
+
+<div class="pagetitle">
+    <h1>Students</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
+            <li class="breadcrumb-item">Students</li>
+            <li class="breadcrumb-item active"><a href="{% url 'student_create' %}">Add Student</a></li>
+        </ol>
+    </nav>
+</div><!-- End Page Title -->
+
+<section class="section">
+    <div class="row">
+        <div class="col-lg-12">
+
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Student List</h5>
+
+                    <div class="table-responsive">
+                        <table class="table table-striped datatable">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Admission Number</th>
+                                    <th>Class</th>
+                                    <th>Phone</th>
+                                    <th>Parent/Guardian</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for student in students %}
+                                <tr>
+                                    <td>
+                                        <a href="{% url 'student_progress' student.id %}">
+                                            {{ student.name}}
+                                        </a>
+                                    </td>
+                                    <td>{{ student.admission_number }}</td>
+                                    <td>{{ student.current_class }}</td>
+                                    <td>{{ student.father_phone }}</td>
+                                    <td>{{ student.father_name }}</td>
+                                    <td><a href="{% url 'student_update' student.pk %}">Edit</a></td>
+                                    <td><a href="{% url 'student_delete' student.pk %}">Delete</a></td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        <!-- End Table with stripped rows -->
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 {% endblock %}
