--- a/templates/teachers/teacher_list.html
+++ b/templates/teachers/teacher_list.html
@@ -1,9 +1,56 @@
-<h2>Teachers List</h2>
-  <ul>
-    {% for teacher in teachers %}
-      <li>
-        <a href="{% url 'teacher_detail' teacher.id %}">{{ teacher.first_name }} {{ teacher.last_name }}</a>
-      </li>
-    {% endfor %}
-  </ul>
-  <a href="{% url 'teacher_create' %}">Add Teacher</a>
+{% extends "base/base.html" %}
+
+{% block content %}
+
+<div class="pagetitle">
+    <h1>Teachers</h1>
+    <nav>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
+        <li class="breadcrumb-item">Teachers</li>
+        <li class="breadcrumb-item active"><a href="{% url 'teacher_create' %}">Add Teacher</a></li>
+      </ol>
+    </nav>
+</div><!-- End Page Title -->
+
+<section class="section">
+    <div class="row">
+        <div class="col-lg-12">
+
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Teachers</h5>
+
+                    <div class="table-responsive">
+                        <table class="table table-striped datatable">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Phone</th>
+                                    <th> ID Number</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                              {% for teacher in teachers %}
+                                <tr>
+                                    <td><a href="{% url 'teacher_detail' teacher.id %}"> {{ teacher.first_name }} {{ teacher.last_name }}</a></td>
+                                    <td>{{teacher.phone}}</td>
+                                    <td>{{ teacher.id_number }}</td>
+                                    <td><a href="{% url 'teacher_edit' teacher.id %}">Edit</a></td>
+                                    <td><a href="{% url 'teacher_delete' teacher.id %}">Delete</a></td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        <!-- End Table with stripped rows -->
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+{% endblock %}
