--- a/templates/auth/reset_password_email.html
+++ b/templates/auth/reset_password_email.html
@@ -68,7 +68,7 @@
         </div>
         <div class="content">
             <div class="logo">
-                <img src="https://media.istockphoto.com/id/1307737982/vector/coat-of-arms-of-the-republic-of-kenya.webp?s=2048x2048&w=is&k=20&c=JHs59I08h3c2tSVaHoQnt2b8gTpOt5TXhWiEOuSGR_c=" alt="Majimaji Logo">
+                <img src="https://github.com/steve-ongera/EnezaElimu-Backup/blob/main/static/assets/img/logo.png" alt="ElimuLogo">
             </div>
             
             <p>Hello {{ user.username }},</p>
@@ -92,8 +92,8 @@
             <p>Best regards,<br>The Majimaji Team</p>
         </div>
         <div class="footer">
-            <p>&copy; 2023 Majimaji Ltd. All rights reserved.</p>
-            <p>Shanzu Kisauni, Mombasa, Kenya | support@majimaji.com</p>
+            <p>&copy; 2025 InnovationHub softwares  Ltd. All rights reserved.</p>
+            <p>Kasarani, Nairobi, Kenya | support@innovationhubsoftware.com</p>
         </div>
     </div>
 </body>
