--- a/templates/cats/cat_form.html
+++ b/templates/cats/cat_form.html
@@ -1,5 +1,74 @@
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+{% extends 'base/base.html' %}
+
+{% block content %}
+  <h2>Enter CAT Scores</h2>
+
+  <div class="card">
+      <div class="card-body">
+          <form method="POST">
+              {% csrf_token %}
+              
+              <div class="row g-3">
+                  <!-- Student Field -->
+                  <div class="col-md-6">
+                      <label for="{{ form.student.id_for_label }}" class="form-label">Student</label>
+                      {{ form.student }}
+                      <div class="text-danger">
+                          {{ form.student.errors }}
+                      </div>
+                  </div>
+
+                  <!-- Subject Field -->
+                  <div class="col-md-6">
+                      <label for="{{ form.subject.id_for_label }}" class="form-label">Subject</label>
+                      {{ form.subject }}
+                      <div class="text-danger">
+                          {{ form.subject.errors }}
+                      </div>
+                  </div>
+
+                  <!-- Term Field -->
+                  <div class="col-md-6">
+                      <label for="{{ form.term.id_for_label }}" class="form-label">Term</label>
+                      {{ form.term }}
+                      <div class="text-danger">
+                          {{ form.term.errors }}
+                      </div>
+                  </div>
+
+                  <!-- CAT 1 Field -->
+                  <div class="col-md-6">
+                      <label for="{{ form.cat1.id_for_label }}" class="form-label">CAT 1 Score</label>
+                      {{ form.cat1 }}
+                      <div class="text-danger">
+                          {{ form.cat1.errors }}
+                      </div>
+                  </div>
+
+                  <!-- CAT 2 Field -->
+                  <div class="col-md-6">
+                      <label for="{{ form.cat2.id_for_label }}" class="form-label">CAT 2 Score</label>
+                      {{ form.cat2 }}
+                      <div class="text-danger">
+                          {{ form.cat2.errors }}
+                      </div>
+                  </div>
+
+                  <!-- CAT 3 Field -->
+                  <div class="col-md-6">
+                      <label for="{{ form.cat3.id_for_label }}" class="form-label">CAT 3 Score</label>
+                      {{ form.cat3 }}
+                      <div class="text-danger">
+                          {{ form.cat3.errors }}
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Submit Button -->
+              <div class="text-center mt-3">
+                  <button type="submit" class="btn btn-primary">Save</button>
+              </div>
+          </form>
+      </div>
+  </div>
+{% endblock %}
