--- a/templates/news/news_confirm_delete.html
+++ b/templates/news/news_confirm_delete.html
@@ -7,7 +7,7 @@
     <h1>Delete news</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
             <li class="breadcrumb-item"><a href="{% url 'appointment_list' %}">Appointments</a></li>
             <li class="breadcrumb-item active">Cancel Appointment</li>
         </ol>
