--- a/templates/teachers/teacher_form.html
+++ b/templates/teachers/teacher_form.html
@@ -1,7 +1,19 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-  <h2>{% if form.instance.id %}Edit{% else %}Add{% endif %} Teacher</h2>
+
+<div class="pagetitle">
+    <h1>{% if form.instance.id %}Edit{% else %}Add{% endif %} Teacher</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'teacher_list' %}">Teachers</a></li>
+            <li class="breadcrumb-item active">{% if form.instance.id %}Edit{% else %}Add{% endif %} Teacherr</li>
+        </ol>
+    </nav>
+</div><!-- End Page Title -->
+
+
 
   <div class="card">
       <div class="card-body">
@@ -10,7 +22,7 @@
               
               <div class="row g-3">
                   <!-- ID Number Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                       <label for="{{ form.id_number.id_for_label }}" class="form-label">ID Number</label>
                       {{ form.id_number }}
                       <div class="text-danger">
@@ -19,7 +31,7 @@
                   </div>
 
                   <!-- First Name Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                       <label for="{{ form.first_name.id_for_label }}" class="form-label">First Name</label>
                       {{ form.first_name }}
                       <div class="text-danger">
@@ -28,7 +40,7 @@
                   </div>
 
                   <!-- Last Name Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                       <label for="{{ form.last_name.id_for_label }}" class="form-label">Last Name</label>
                       {{ form.last_name }}
                       <div class="text-danger">
@@ -37,7 +49,7 @@
                   </div>
 
                   <!-- Email Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-3">
                       <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
                       {{ form.email }}
                       <div class="text-danger">
@@ -46,7 +58,7 @@
                   </div>
 
                   <!-- Phone Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-3">
                       <label for="{{ form.phone.id_for_label }}" class="form-label">Phone</label>
                       {{ form.phone }}
                       <div class="text-danger">
@@ -55,7 +67,7 @@
                   </div>
 
                   <!-- Address Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-3">
                       <label for="{{ form.address.id_for_label }}" class="form-label">Address</label>
                       {{ form.address }}
                       <div class="text-danger">
@@ -64,7 +76,7 @@
                   </div>
 
                   <!-- Assigned Class Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-3">
                       <label for="{{ form.assigned_class.id_for_label }}" class="form-label">Assigned Class</label>
                       {{ form.assigned_class }}
                       <div class="text-danger">
@@ -73,7 +85,7 @@
                   </div>
 
                   <!-- Profile Image Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-2">
                       <label for="{{ form.profile_image.id_for_label }}" class="form-label">Profile Image</label>
                       {{ form.profile_image }}
                       <div class="text-danger">
@@ -82,7 +94,7 @@
                   </div>
 
                   <!-- Date of Birth Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-2">
                       <label for="{{ form.date_of_birth.id_for_label }}" class="form-label">Date of Birth</label>
                       {{ form.date_of_birth }}
                       <div class="text-danger">
@@ -91,7 +103,7 @@
                   </div>
 
                   <!-- Gender Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-2">
                       <label for="{{ form.gender.id_for_label }}" class="form-label">Gender</label>
                       {{ form.gender }}
                       <div class="text-danger">
@@ -100,7 +112,7 @@
                   </div>
 
                   <!-- Nationality Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-2">
                       <label for="{{ form.nationality.id_for_label }}" class="form-label">Nationality</label>
                       {{ form.nationality }}
                       <div class="text-danger">
@@ -109,7 +121,7 @@
                   </div>
 
                   <!-- Employment Date Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-2">
                       <label for="{{ form.employment_date.id_for_label }}" class="form-label">Employment Date</label>
                       {{ form.employment_date }}
                       <div class="text-danger">
@@ -118,7 +130,7 @@
                   </div>
 
                   <!-- Department Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-2">
                       <label for="{{ form.department.id_for_label }}" class="form-label">Department</label>
                       {{ form.department }}
                       <div class="text-danger">
@@ -127,7 +139,7 @@
                   </div>
 
                   <!-- Position Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                       <label for="{{ form.position.id_for_label }}" class="form-label">Position</label>
                       {{ form.position }}
                       <div class="text-danger">
@@ -136,7 +148,7 @@
                   </div>
 
                   <!-- Emergency Contact Name Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                       <label for="{{ form.emergency_contact_name.id_for_label }}" class="form-label">Emergency Contact Name</label>
                       {{ form.emergency_contact_name }}
                       <div class="text-danger">
@@ -145,7 +157,7 @@
                   </div>
 
                   <!-- Emergency Contact Phone Field -->
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                       <label for="{{ form.emergency_contact_phone.id_for_label }}" class="form-label">Emergency Contact Phone</label>
                       {{ form.emergency_contact_phone }}
                       <div class="text-danger">
