--- a/templates/help/system_settings.html
+++ b/templates/help/system_settings.html
@@ -5,7 +5,7 @@
     <h1>System Settings</h1>
     <nav>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Home</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
         <li class="breadcrumb-item active">System Settings</li>
       </ol>
     </nav>
